--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <p>Hello World</p>
+    <!-- <p>Hello World</p>
     <p class="SS">CSE 24</p>
     <p class="SS">Class element</p>
     <p id="l1">ABES EC</p>
@@ -17,6 +17,5 @@
     <div id="l3">Ali</div>
     <div id="l4">CSE</div>
     <div id="15">BTech</div>
-
-    
+    We can assign  multiple classes to single element and single class to multiple elements -->
 </body>
