--- a/flexbox.html
+++ b/flexbox.html
@@ -11,8 +11,8 @@
         <div class="item">Item1</div>
         <div class="item">Item2</div>
         <div class="item">Item3</div>
-        <div class="item">Item4</div>
+        <div class="item item4">Item4</div>
     </div>
 </body>
 
-
+</html>
